--- a/.github/workflows/test1.yml
+++ b/.github/workflows/test1.yml
@@ -20,7 +20,7 @@ on:
       - master
 
 env:
-  PROJECT_ID: $
+  PROJECT_ID: ${{ secrets.GKE_PROJECT }}
   GCE_INSTANCE: gcpcicd-1 # TODO: update to instance name
   GCE_INSTANCE_ZONE: asia-northeast3-a # TODO: update to instance zone
 
