--- a/.github/workflows/gcp-dhub.yml
+++ b/.github/workflows/gcp-dhub.yml
@@ -53,7 +53,8 @@ jobs:
     - id: 'auth'
       uses: 'google-github-actions/auth@v0'
       with:
-        credentials_json: '${{ secrets.GCP_CREDENTIALS }}'
+        credentials_json: '${{ secrets.GCE_SA_KEY }}' 
+        #GCE_SA_KEY or GCP_CREDENTIALS
 
     # - name: Docker configuration
     #  run: |-
