--- a/.github/workflows/gcp-dhub.yml
+++ b/.github/workflows/gcp-dhub.yml
@@ -88,7 +88,7 @@ jobs:
         NAME: cdgritest # 계정 명
         REPO: hello 
       run: |
-        docker build -t $REPOSITORY_NAME .
+        docker build -t $IMAGE_NAME .
         docker tag $IMAGE_NAME:latest $NAME/$IMAGE_NAME:latest
         docker push $NAME/$IMAGE_NAME:latest
         
